WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263788
[WebGPU] WebGPU: large binding numbers cause Metal compilation to fail
https://bugs.webkit.org/show_bug.cgi?id=263788
Summary
[WebGPU] WebGPU: large binding numbers cause Metal compilation to fail
Mike Wyrzykowski
Reported
2023-10-27 10:46:47 PDT
[WebGPU] WebGPU: large binding numbers cause Metal compilation to fail
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2023-10-27 10:46:57 PDT
<
radar://117590111
>
Mike Wyrzykowski
Comment 2
2023-10-27 10:50:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19646
EWS
Comment 3
2023-10-30 10:21:26 PDT
Committed
269955@main
(0a7abfa22cd3): <
https://commits.webkit.org/269955@main
> Reviewed commits have been landed. Closing PR #19646 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug