WebGPU: large binding numbers cause Metal compilation to fail https://bugs.webkit.org/show_bug.cgi?id=263788 <radar://117590111>

Reviewed by Tadeu Zagallo.

It is not allowed to have a binding with index greater than
maxBindingsPerBindGroup, we should return an invalid BindGroupLayout.

* Source/WebGPU/WebGPU/BindGroupLayout.mm:
(WebGPU::Device::createBindGroupLayout):

Canonical link: https://commits.webkit.org/269955@main